suggestions feature added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <form class="search-form js-search-form">
                 <input placeholder="Type a keyword and press Enter to search" type="search"
                     class="search-input js-search-input" autofocus />
+                    <div class="suggestions js-suggestions"></div> <!-- Added for suggestions -->
             </form>
         </header>
+        
 
         <div class="loading-indicator">
             <div class="sk-chase js-spinner hidden">
