--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <button class="dark-mode-toggle">Toggle Dark Mode</button>
 
-  
-    <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css">
 
     <title>Wikipedia Clone</title>
 </head>
