developer credit added

--- a/index.html
+++ b/index.html
@@ -45,4 +45,9 @@
     <script src="script.js"></script>
 </body>
 
+<footer class="footer">
+    <p>Developed by <a href="https://github.com/thenameisshuvo" target="_blank">Tanvir Rahman Shuvo</a></p>
+</footer>
+
+
 </html>
