--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <!-- Dark Mode Toggle with SVG Icons -->
+    <!-- Dark Mode Toggle -->
     <button class="dark-mode-toggle">
-        <img src="/toggle-left.svg" alt="Light Mode" class="left-toggle">
-        <img src="/toggle-right.svg" alt="Dark Mode" class="right-toggle">
+        <span class="left-toggle">🌙</span> <!-- Dark Mode Icon (you can use emoji or text here) -->
+        <span class="right-toggle">🌞</span> <!-- Light Mode Icon -->
     </button>
 
     <main>
