searchbox instruction changed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/657px-Wikipedia-logo-v2.svg.png"
                 alt="Wikipedia Logo" />
             <form class="search-form js-search-form">
-                <input placeholder="Type a keyword and press Enter to search" type="search"
+                <input placeholder=" What are you looking for? Start typing! " type="search"
                     class="search-input js-search-input" autofocus />
                 <div class="suggestions js-suggestions"></div>
             </form>
